<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_photograph" />

    <Button
        android:id="@+id/btnFromAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_photo_album" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel" />
</LinearLayout>