<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/common_margin"
    android:orientation="vertical"
    android:weightSum="2">

    <util.HeaderBar
        style="@style/MatchWrap"
        app:isRightShow="true"
        app:isShowBack="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:id="@+id/txtOrderCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="订单号："
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/editOrderCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="请输入订单号"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_function"
        android:textSize="@dimen/text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnPhotograph"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_photograph" />

        <Button
            android:id="@+id/btnVideo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_video" />
    </LinearLayout>

    <!-- <Button
         android:id="@+id/btnPhotoAlbum"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/button_photo_album" />-->

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel" />
</LinearLayout>